# sports-database

./: README.md  file_util.py
main/: CMakeLists.txt
main/include/: city.h  country.h  fileutil.h  league.h  location.h  player.h  season.h  state.h  team.h
main/src/: city.cpp  country.cpp  fileutil.cpp  location.cpp  main.cpp  state.cpp
scraper/: cfb.py  epl.py  main.py  nba.py  nfl.py  scraper.py  util.py
